@@ -1,5 +1,6 @@
 2009-10-19  Tolleiv Nietsch <nietsch@aoemedia.de>
 
+	* Fixed issue #6869: $realDelete for templavoila
 	* Fixed bug #10756: Bad text ("TCE-Form") 
 
 2009-10-18  Tolleiv Nietsch <nietsch@aoemedia.de>
